Changes for the CPAN Testers Preferences website
================================================

0.15	2014-07-05
        - renamed to CPAN-Testers-WWW-Preferences.
        - documentation fixes.

0.14	2014-07-05
        - first release to CPAN.
        - renamed tables.
        - upgrade to Labyrinth-5.20.
        - upgrade to Labyrinth-Plugin-Core-5.14.
        - upgrade to Labyrinth-DIUtils-ImageMagick-5.04.

0.13	2011-08-18
        - user lists now hide special users (Guest), restrict access to users
          of the same or higher access, and prevent priveledged users from
          being deleted.
        - user acls fixed to correctly list folders and access.
        - folder list driven by database, added FolderName function.
        - update to admin templates to make them consistent across sites.
        - revised banner logo image by Jon 'JJ' Allen.

0.12	2010-10-03
        - upgrade to Labyrinth v5.00 (CORE only)
        - added links to Metabase and Labyrinth.
        - repositioned site boxes to avoid text and logo clashing.
        - activated SetHits.
        - update CSS for lists.
        - reworded templates to make it clearer how to disable notifications.
        - new perl_version table incorporated to speed up perl version lookups.

0.11	2010-01-19
        - moved dist version lookup away from 'cpanstats' table.
        - removed obsolete methods from Preferences.pm.
        - removed obsolete queries from phrasebook.ini.
        - removed use of DBX to connect to additional SQLite DBs as all are
          MySQL now.
        - OS names loaded from DB not config.

0.10	2010-01-14
        - added Analysis to site family lists.
        - added quote.html

0.09	2009-07-30
        - added missing user-forgot action.
        - removed word 'Notification' from author menu.
        - author distribution list now only list dist on CPAN.
        - s/\s.*// filtering on Perl Version pattern matching.