@@ -1,6 +1,5 @@
 Changes
 lib/CPAN/Testers/WWW/Preferences.pm
-lib/Labyrinth/Plugin/CPAN.pm
 lib/Labyrinth/Plugin/CPAN/Preferences.pm
 LICENSE
 Makefile.PL
